--- a/src/defaults.yml
+++ b/src/defaults.yml
@@ -1,1 +1,21 @@
-option: value
+enabled: false
+world: world
+timer: 1800
+waitingarea:
+  x1: 0
+  y1: 0
+  z1: 0
+  x2: 0
+  y2: 0
+  z2: 0
+combatarea:
+  x1: 0
+  y1: 0
+  z1: 0
+  x2: 0
+  y2: 0
+  z2: 0
+waitingroomspawn:
+  x: 0
+  y: 0
+  z: 0
