Multiple areas through worldguard

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,7 +2,7 @@ name: HeadHunters
 main: no.runsafe.headhunters.Plugin
 version: 1.0.42b
 authors: [Naxanria]
-depend: []
+depend: [WorldGuard]
 description:
 commands:
   headhunters:
