Not a runsafe plugin - change package name.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: HeadHunters
-main: no.runsafe.headhunters.Plugin
+main: nl.naxanria.headhunters.Plugin
 version: 1.0.99b
 authors: [Naxanria]
 depend: [RunsafeWorldGuardBridge]
